# microservices-fastapi-vue-mongodb

./: .env.example  .gitignore  LICENCE  README.md  docker-compose.yml  redis.conf
backend/admin_service/: Content Admin API.postman_collection.json  Content_Admin_API.postman_collection.json  Content_Admin_Devs.postman_environment.json  README.ME  README.md  docker-compose.test.yml  docker-compose.yml  lint.sh  newman_report.html  pyproject.toml  run_lint.sh  run_tests.sh
backend/admin_service/admin_gui/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  quasar.config.js
backend/admin_service/admin_gui/admin_gui/: README.md  package-lock.json  package.json
backend/admin_service/admin_gui/src/: App.vue
backend/admin_service/admin_gui/src/boot/: axios.js
backend/admin_service/admin_gui/src/components/: AboutCard.vue  AboutCreateModal.vue  AboutEditModal.vue  CertificateCard.vue  CommentItem.vue  CreateCertificateModal.vue  CreatePublicationModal.vue  CreateUserModal.vue  NotificationCard.vue  ProjectCard.vue  ProjectCommentsCard.vue  ProjectCommentsModal.vue  TechCard.vue  (+10 more)
backend/admin_service/postman-files/: wrong-format.txt
backend/admin_service/src/: .dockerignore  Dockerfile  docker-entrypoint.sh  main.py  pyproject.toml  settings.py
backend/admin_service/src/alembic/: env.py
backend/admin_service/src/auth_admin/: dependencies.py
backend/admin_service/src/comments_admin/: crud.py  db_connection.py  dependencies.py  models.py  schemas.py
backend/admin_service/src/content_admin/: dependencies.py
backend/admin_service/src/data/: about.json  publications.json
backend/admin_service/src/models/: about.py
backend/admin_service/src/notification_admin/: dependecies.py  tasks.py
backend/admin_service/src/routes/: about.py
backend/admin_service/src/services/: base_kafka_producer.py  cache_invalidation.py  data_loader.py  email_sending.py  image_processor.py  kafka_cache_invalidation_producer.py  kafka_logger_producer.py  kafka_producer.py  kafka_topic_management.py  logger.py  minio_management.py  mongo_db_management.py  password_processor.py  pdf_processor.py  postgres_db_management.py  token_processor.py  utils.py  webhooks.py
backend/admin_service/tests/test_auth_admin/: conftest.py  test_crud_auth.py  test_crud_token.py
backend/admin_service/tests/test_comments_admin/: conftest.py
backend/admin_service/tests/test_content_admin/: conftest.py  test_crud_about.py  test_crud_certificates.py  test_crud_projects.py  test_crud_publications.py
backend/admin_service/tests/test_notification_admin/: conftest.py  test_crud_notification.py
backend/admin_service/tests/test_services/: test_utils.py
backend/api_gateway/: .dockerignore  API_Gateway.postman_collection.json  API_Gateway.postman_environment.json  Dockerfile  README.md  main.py  pyproject.toml  run_format.sh  settings.py
backend/api_gateway/proto/: content.proto
backend/api_gateway/routes/: content.py
backend/api_gateway/scripts/: generate_protos.py
backend/api_gateway/services/: content_service.py
backend/api_gateway/src/: logger.py  main.py  settings.py
backend/api_gateway/src/grpc_clients/: auth_client.py  comments_client.py  content_service.py
backend/api_gateway/src/protos/: auth_service_pb2.py  auth_service_pb2.pyi  auth_service_pb2_grpc.py  comments_service.proto  comments_service_pb2.py  comments_service_pb2.pyi  comments_service_pb2_grpc.py  content_service.proto  content_service_pb2.py  content_service_pb2.pyi  content_service_pb2_grpc.py
backend/api_gateway/src/services/: cache_decorator.py  cache_dependencies.py  cache_service.py  dependencies.py  kafka_consumer.py  rate_limit_decorator.py  redis_connect_management.py  token_bucket.py  utils.py
backend/auth_service/: Dockerfile  README.md  pyproject.toml
backend/auth_service/scripts/: generate_proto.py
backend/auth_service/src/: logger.py  main.py  settings.py
backend/auth_service/src/crud/: auth.py  token.py
backend/auth_service/src/models/: schemas.py
backend/auth_service/src/proto/: auth.proto  auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py
backend/auth_service/src/services/: auth_service.py  database.py  kafka_producer.py  kafka_topic_management.py  password_processor.py  token_processor.py
backend/auth_service/src/tests/: conftest.py  test_database.py
backend/comments_service/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/comments_service/scripts/: generate_proto.py
backend/comments_service/src/: logger.py  main.py  models.py  schemas.py  settings.py
backend/comments_service/src/crud/: comments.py
backend/comments_service/src/proto/: comments.proto  comments_pb2.py  comments_pb2.pyi  comments_pb2_grpc.py
backend/comments_service/src/services/: comments_service.py  database.py
backend/content_service/: .dockerignore  Dockerfile  README.ME  README.md  main.py  pyproject.toml  run_grpc_server.sh  run_lint.sh
backend/content_service/scripts/: generate_proto.py
backend/content_service/src/: grpc_client.py  grpc_server.py  logger.py  main.py  settings.py
backend/content_service/src/data/: certificates.json  projects.json  publications.json  tech.json
backend/content_service/src/models/: schemas.py
backend/content_service/src/proto/: about.proto  content.proto  content_pb2.py  content_pb2.pyi  content_pb2_grpc.py
backend/content_service/src/routes/: about.py  grpc_about.py
backend/content_service/src/service/: content_service.py  database.py  decorators.py
backend/content_service/src/services/: database.py  db_connection.py  db_management.py  init_db.py  logger.py
backend/content_service/src/tests/: conftest.py  test_database.py  test_grpc_service.py
backend/notification_service/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/notification_service/src/: logger.py  main.py  settings.py
backend/notification_service/src/crud/: notification.py
backend/notification_service/src/models/: notification.py
backend/notification_service/src/services/: database.py  email_sending.py  email_templates.py  kafka_consumer.py
(+189 files in other folders)
