[project]
name = "content-service"
version = "0.1.0"
description = "Content Service for My Personal Site Microservices"
authors = [
    {name = "IvanZaycev0717",email = "ivzaycev0717@yandex.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio (>=1.75.1,<2.0.0)",
    "grpcio-tools (>=1.75.1,<2.0.0)",
    "pymongo (>=4.15.2,<5.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "colorlog (>=6.9.0,<7.0.0)",
    "grpcio-reflection (>=1.75.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
ruff = "^0.13.3"

[tool.poetry.scripts]
generate-proto = "src.generate_proto:main"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[tool.taskipy.tasks]
generate-proto = "python scripts/generate_proto.py"

