[project]
name = "content-service"
version = "0.1.0"
description = "Content Service for My Personal Site Microservices"
authors = [
    {name = "IvanZaycev0717",email = "ivzaycev0717@yandex.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio (>=1.75.1,<2.0.0)",
    "grpcio-tools (>=1.75.1,<2.0.0)",
    "pymongo (>=4.15.2,<5.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "colorlog (>=6.9.0,<7.0.0)",
    "grpcio-reflection (>=1.75.1,<2.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "pytest-env (>=1.1.5,<2.0.0)",
    "mongomock (>=4.3.0,<5.0.0)",
    "grpcio-health-checking (>=1.75.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
ruff = "^0.13.3"

[tool.poetry.scripts]
generate-proto = "src.generate_proto:main"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
watchdog = ">=6.0.0,<7.0.0"

[tool.taskipy.tasks]
generate-proto = "python scripts/generate_proto.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = [
    "--import-mode=importlib",
]
pythonpath = ["src"]

