[project]
name = "notification-service"
version = "0.1.0"
description = ""
authors = [
    {name = "IvanZaycev0717",email = "ivzaycev0717@yandex.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "colorlog (>=6.9.0,<7.0.0)",
    "pydantic[email] (>=2.12.0,<3.0.0)",
    "pymongo (>=4.15.3,<5.0.0)",
    "fastapi[all] (>=0.118.2,<0.119.0)",
    "confluent-kafka (>=2.11.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
