[project]
name = "admin_service"
version = "1.0"
description = ""
authors = [
    {name = "IvanZaycev0717",email = "ivzaycev0717@yandex.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pymongo (>=4.14.1,<5.0.0)",
    "colorlog (>=6.9.0,<7.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pillow (>=11.3.0,<12.0.0)",
    "minio (>=7.2.16,<8.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "jwt (>=1.4.0,<2.0.0)",
    "pydantic[email] (>=2.11.9,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "fastapi-mail[httpx] (>=1.5.0,<2.0.0)",
    "mimesis (>=18.0.0,<19.0.0)",
    "pytest-env (>=1.1.5,<2.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "mongomock-motor (>=0.0.36,<0.0.37)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8-isort = "^6.1.2"
ruff = "^0.12.11"

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 79

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = [
    "--import-mode=importlib",
]
pythonpath = ["src"]

env = [
    "BASE_HOST=localhost",
    "BASE_PORT=8000",
    "SECRET_KEY=test-secret-key",
    "ALGORITHM=HS256",
    "CONTENT_ADMIN_MONGO_ROOT_USERNAME=test",
    "CONTENT_ADMIN_MONGO_ROOT_PASSWORD=test",
    "CONTENT_ADMIN_MONGODB_URL=mongodb://localhost:27017",
    "CONTENT_ADMIN_MONGO_DATABASE_NAME=test",
    "CONTENT_ADMIN_MONGO_PORT=27017",
    "CONTENT_ADMIN_ME_CONFIG_MONGODB_URL=mongodb://localhost:27017",
    "POSTGRES_USER=test",
    "POSTGRES_PASSWORD=test",
    "COMMENTS_ADMIN_POSTGRES_ROOT_NAME=test",
    "COMMENTS_ADMIN_POSTGRES_PORT=5432",
    "COMMENTS_ADMIN_POSTGRES_DB_NAME=test",
    "COMMENTS_ADMIN_POSTGRES_DB_URL=postgresql://test:test@localhost:5432/test",
    "AUTH_ADMIN_MONGO_ROOT_USERNAME=test",
    "AUTH_ADMIN_MONGO_ROOT_PASSWORD=test",
    "AUTH_ADMIN_MONGODB_URL=mongodb://localhost:27017",
    "AUTH_ADMIN_MONGO_DATABASE_NAME=test",
    "AUTH_ADMIN_MONGO_PORT=27017",
    "AUTH_ADMIN_ME_CONFIG_MONGODB_URL=mongodb://localhost:27017",
    "ADMIN_EMAIL=admin@test.com",
    "ADMIN_PASSWORD=test",
    "NOTIFICATION_ADMIN_MONGO_ROOT_USERNAME=test",
    "NOTIFICATION_ADMIN_MONGO_ROOT_PASSWORD=test",
    "NOTIFICATION_ADMIN_MONGODB_URL=mongodb://localhost:27017",
    "NOTIFICATION_ADMIN_MONGO_DATABASE_NAME=test",
    "NOTIFICATION_ADMIN_MONGO_PORT=27017",
    "NOTIFICATION_ADMIN_ME_CONFIG_MONGODB_URL=mongodb://localhost:27017",
    "MINIO_ROOT_USER=test",
    "MINIO_ROOT_PASSWORD=test",
    "MINIO_HOST=localhost",
    "MINIO_PORT=9000",
    "SMTP_USERNAME=test",
    "SMTP_PASSWORD=test",
    "SMTP_FROM=test@test.com"
]